stats-preview-card-component-main/styles/style.css
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&family=Lexend+Deca&display=swap');

*,
*:before,
*:after {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

img {
  display: block;
  width: 100%;
}

body {
  display: flex;
  justify-content: center;
  align-items: center;
  min-height: 100vh;
  font-family: 'Inter', sans-serif;
  background-color: hsl(233, 47%, 7%);
}

.card {
  background-color: hsl(244, 38%, 16%);
  max-width: 20.4375rem;
  border-radius: 0.5rem;
  overflow: hidden;
}

.header__img {
  background-color: hsl(277, 64%, 61%);
}

.header__img img {
  opacity: 0.8;
  mix-blend-mode: multiply;
}

.img--desktop {
  display: none;
}

.content__container {
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 1rem;
  padding: 2.5rem 2rem 2rem;
}

.heading {
  font-size: 1.75rem;
  font-weight: 700;
  line-height: calc(32 / 28);
  text-align: center;
  color: hsl(0, 0%, 100%);
}

.heading span {
  color: hsl(277, 64%, 61%);
}

.sub__heading {
  color: hsla(0, 0%, 100%, 0.75);
  font-size: 0.9375rem;
  line-height: calc(25 / 15);
  text-align: center;
}

.stats__container {
  display: flex;
  flex-direction: column;
  gap: 1.5rem;
  margin-top: 1.5rem;
}

.stats {
  text-align: center;
}

.stats h3 {
  color: hsl(0, 0%, 100%);
  font-size: 1.5rem;
  font-weight: 700;
}

.stats p {
  color: hsla(0, 0%, 100%, 0.6);
  font-family: 'Lexend Deca', sans-serif;
  font-size: 0.75rem;
  letter-spacing: 0.0625rem;
  line-height: calc(25 / 12);
  text-transform: uppercase;
  margin-top: 0.125rem;
}

@media (min-width: 75rem) {
  .card {
    display: flex;
    flex-direction: row-reverse;
    justify-content: space-between;
    max-width: 69.375rem;
  }

  .content__container {
    align-items: flex-start;
    gap: 1.5rem;
    padding: 4.5rem 4.5rem 3.75rem;
    max-width: 47%;
  }

  .img--mobile {
    display: none;
  }

  .img--desktop {
    display: block;
  }

  .heading {
    font-size: 2.25rem;
    line-height: calc(44 / 36);
  }

  .heading,
  .sub__heading {
    text-align: start;
  }

  .stats__container {
    flex-direction: row;
    justify-content: space-between;
    margin-top: 3rem;
    width: 100%;
  }

  .stats {
    text-align: start;
  }
}

